[Cocoa] _WKRemoteObjectInterface leaks NSString ivar https://bugs.webkit.org/show_bug.cgi?id=134914

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-07-14
Reviewed by Simon Fraser.

Release our copied NSString in dealloc.

* Shared/API/Cocoa/_WKRemoteObjectInterface.mm:
(-[_WKRemoteObjectInterface dealloc]):

Canonical link: https://commits.webkit.org/152861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171098 268f45cc-cd09-0410-ab3c-d52691b4dbfc